expose.yml
apiVersion: v1
kind: Service
metadata:
  name: b2
spec:
  selector:
    app: brewery
  type: ExternalName
  externalName: brewpi
