brewery.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: brewery-deployment
  labels:
    app: brewery
spec:
  selector:
    matchLabels:
      app: brewery
  replicas: 1
  template:
    metadata:
      labels:
        app: brewery
    spec:
      containers:
      - name: brewery
        image: mkuchenbecker/brewery3:brewery-latest
        imagePullPolicy: Always
        ports:
        - name: brewery-service
          containerPort: 9000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      - name: element
        image: mkuchenbecker/brewery3:element-latest
        imagePullPolicy: Always
        ports:
        - name: element-service
          containerPort: 9100
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
      - name: therm-mash
        image: mkuchenbecker/brewery3:thermometer-latest
        imagePullPolicy: Always
        ports:
        - name: therm-mash-srv
          containerPort: 9110
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
      - name: therm-herms
        image: mkuchenbecker/brewery3:thermometer-latest
        imagePullPolicy: Always
        ports:
        - name: therm-herms-srv
          containerPort: 9111
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "125Mi"
            cpu: "250m"
      - name: therm-boil
        image: mkuchenbecker/brewery3:thermometer-latest
        imagePullPolicy: Always
        ports:
        - name: therm-boil-srv
          containerPort: 9112
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: brewery-service
spec:
  selector:
    app: brewery
  type: NodePort
  ports:
  - port: 9000
    nodePort: 30000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: brewery
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /brewery
        backend:
          serviceName: brewery-service
          servicePort: 9000
