ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: brewery
spec:
  backend:
    serviceName: brewery-service
    servicePort: 9000
